--- a/aboutme.css
+++ b/aboutme.css
@@ -389,14 +389,29 @@ body::after {
 }
 
 #lamp {
-  width: 40vh;
-  height: 100vh;
-  margin: 0 auto;
-}
+	width: 40vh;
+	height: 100vh;
+	margin: 0 auto;
+  }
+  
+  /* Stiluri pentru dispozitive de tip desktop */
+  @media screen and (min-width: 768px) {
+	/* Aici puteți păstra dimensiunile și stilurile existente pentru lampă */
+  }
+  
+  /* Stiluri pentru dispozitive mobile */
+  @media screen and (max-width: 767px) {
+	#lamp {
+	  width: 100%; /* Redimensionați lampa pentru a ocupa întreaga lățime a ecranului */
+	  height: auto; /* Permiteți înălțimii să se ajusteze în funcție de conținut */
+	}
+  }
+
 #top, #bottom {
   background: #888;
   background: linear-gradient(111deg, #111 0%, #ccc 45%, #ccc 50%, #888 60%, #111);
 }
+
 #top {
   height: 7vh;
   width: 36vh;
@@ -411,6 +426,7 @@ body::after {
     inset 0 -.3vh .5vh rgba(128,0,0,.5);
   z-index: 2;
 }
+
 #top::after {
   content: ' ';
   display: block;
@@ -425,6 +441,7 @@ body::after {
   border-radius: 48%;
   filter: blur(2vh);
 }
+
 #bottom {
   height: 3vh;
   border-radius: 1vh;
@@ -432,6 +449,7 @@ body::after {
     inset 0 -.5vh .5vh rgba(0,0,0,.5),
     inset 0 .5vh .5vh rgba(128,0,0,.5);
 }
+
 #bottom::after {
   content: ' ';
   display: block;
@@ -446,6 +464,7 @@ body::after {
   border-radius: 48%;
   filter: blur(3vh);
 }
+
 #glass {
   overflow: hidden;
   width: 100%;
@@ -458,6 +477,7 @@ body::after {
   box-shadow: inset 0 -5vh 1vh 1vh rgba(255,0,0,.6), 0 0 2.5px .2px #808;
   border-radius: 1vh 1vh 5vh 5vh/20%;
 }
+
 .bubble {
   height: 16vh;
   border-radius: 40%;
@@ -469,69 +489,120 @@ body::after {
     vastag linear 29s infinite,
     forog linear 31s infinite;
 }
+
 .bubble:nth-child(2) {
   animation: updown ease-in 41s infinite,
     leftright ease-in-out 47s infinite,
     vastag linear 23s infinite,
     forog linear 29s infinite;
 }
+
 .bubble:nth-child(3) {
   animation: updown ease-out 43s infinite,
     leftright ease-in-out 53s infinite,
     vastag linear 29s infinite,
     forog linear 31s infinite;
 }
+
 .bubble:nth-child(4) {
   animation: updown ease-in-out 47s infinite,
     leftright ease-in-out 59s infinite,
     vastag linear 31s infinite,
     forog linear 41s infinite;
 }
+
 .bubble:nth-child(5) {
   animation: updown ease-in-out 29s infinite,
     leftright ease-in-out 31s infinite,
     vastag linear 37s infinite,
     forog linear 47s infinite;
 }
+
 .bubble:last-child {
   animation: updown linear 53s infinite,
     leftright ease-in-out 29s infinite,
     vastag linear 19s infinite,
     forog linear 37s infinite;
 }
+  
+  @media (min-width: 768px) {
+	.aboutme-containers {
+		position: absolute; /* Schimbă din absolute în relative pentru a nu acoperi alte elemente */
+		top: 450px;
+		left: 0;
+		right: 0;
+		text-align: center;
+		padding: 50px;
+		margin-top: 20px; /* Adaugă o margine superioară pentru a separa containerele de elementul lamp */
+	  }
+	
+	  .aboutme-lists {
+		display: flex;
+		justify-content: space-between;
+	  }
+	
+	  .aboutme {
+		flex: 1 0 auto;
+		display: block;
+		padding: 0px;
+		height: 500px;
+		text-align: center;
+		text-decoration: none;
+		margin-right: 20px;
+		backdrop-filter: blur(12px) saturate(200%);
+		-webkit-backdrop-filter: blur(12px) saturate(200%);
+		background-color: rgba(109, 10, 16, 0.82);
+		border-radius: 12px;
+		border: 1px solid rgba(255, 255, 255, 0.125);
+		box-sizing: border-box;
+		max-width: 420px;
+	  }
+	
+	  .aboutme:last-child {
+		margin-right: 0;
+	  }
+	}
+  
+	@media (max-width: 767px) {
+		.aboutme-containers {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+		  }
+		
+		  .aboutme-lists {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: space-between;
+		  }
+		
+		  .aboutme {
+			width: 100%;
+			max-width: 400px;
+			margin: 5px 0;
+		  }
+		  
+		  .aboutme:last-child {
+			margin-left: -12px;
+		  }
 
-.social-icon {
-    display: inline-block;
-    margin-right: 156px; /* Adaugă o margine între pictograme */
-	padding: 20px;
-	margin-left: 20px;
-}
-
-.fa-brands {
-	justify-content:space-between;
-    font-size: 25px;
-    text-decoration: none;
-    color: #ffffff; /* Schimbă culoarea pictogramelor la nevoie */
-}
-
-.fa-brands:hover {
-    opacity: 0.3;
-}
-
-.copyright {
-	color: #fff;
-	text-align: center;
-	padding: 0px;
-}
-
-.aboutme-containers {
-	position: absolute;
-  	top: 450px; /* Ajustați această valoare în funcție de poziția dorită față de #lamp */
-  	left: 0; /* Ajustați această valoare în funcție de poziția dorită față de #lamp */
-  	right: 0; /* Ajustați această valoare în funcție de poziția dorită față de #lamp */
-  	text-align: center;
-  	padding: 50px;
-}
+		.aboutme-containers {
+		  position: relative;
+		  top: auto;
+		  left: auto;
+		  right: auto;
+		  text-align: center;
+		  padding: 50px;
+		  display: flex;
+		  flex-direction: column;
+		  align-items: center;
+		  margin-top: 0;
+		  max-width: 420px;
+		}
+	  }		 
 
 .aboutme-lists {
 	display: flex;
@@ -553,7 +624,9 @@ body::after {
     border: 1px solid rgba(255, 255, 255, 0.125);
 	justify-content: space-between;
 	box-sizing: border-box;
-	max-width: 420px;
+	max-width: 320px;
+    margin-right: 10px;
+    margin-bottom: 20px;
 }
 
 .aboutme:last-child {
@@ -569,3 +642,49 @@ body::after {
 	font-size: 26px;
 	color: #fff;
 }
+
+.social-icons {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+  }
+  
+  .social-icon {
+	display: flex;
+	align-items: center;
+	text-decoration: none;
+	color: #000;
+  }
+  
+  .social-icon i {
+	margin-right: 10px;
+	font-size: 25px;
+  }
+  
+  @media (max-width: 767px) {
+	.social-icons {
+	  flex-direction: column;
+	}
+	
+	.social-icon {
+	  margin-bottom: 10px;
+	}
+  }
+
+.fa-brands {
+	justify-content:space-between;
+    font-size: 25px;
+    text-decoration: none;
+    color: #ffffff; /* Schimbă culoarea pictogramelor la nevoie */
+}
+
+.fa-brands:hover {
+    opacity: 0.3;
+}
+
+.copyright {
+	color: #fff;
+	text-align: center;
+	padding: 0px;
+}
+
