--- a/aboutme.css
+++ b/aboutme.css
@@ -569,7 +569,7 @@ body::after {
 			flex-direction: column;
 			justify-content: center;
 			align-items: center;
-			height: 115vh;
+			height: 150px;
 		  }
 		
 		  .aboutme-lists {
