--- a/aboutme.css
+++ b/aboutme.css
@@ -569,6 +569,7 @@ body::after {
 			flex-direction: column;
 			justify-content: center;
 			align-items: center;
+			height: 100vh;
 		  }
 		
 		  .aboutme-lists {
@@ -581,6 +582,7 @@ body::after {
 		  .aboutme {
 			width: 100%;
 			max-width: 400px;
+			height: 50%;
 		  }
 		  
 		  .aboutme:last-child {
